--- a/ice-uc/src/main/resources/application.yml
+++ b/ice-uc/src/main/resources/application.yml
@@ -22,11 +22,44 @@ spring:
     testOnReturn: false
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
-  rabbitmq:
-    host: ${RABBIT_MQ_HOST:localhost}
-    port:  ${RABBIT_MQ_PORT:5672}
-    username: guest
-    password: guest
+  cloud:
+    stream:
+      defaultBinder: defaultRabbit
+      bindings:
+        input:
+          destination: mqTestDefault    # 目的，对应 MQ 是 exchange， 生成临时队列
+        output:
+          destination: mqTestDefault
+          contentType: text/plain
+          binder: defaultRabbit
+        inputOrder:
+          destination: mqTestOrder
+          group: orderReceiveGroup1     # 具体分组 对应 MQ 是 队列名称 并且持久化队列
+        outputOrder:
+          destination: mqTestOrder
+#          contentType: text/plain      # 实体 json string 在传递的类型装换 查看 http://docs.spring.io/spring-cloud-stream/docs/Chelsea.SR2/reference/htmlsingle/index.html#mime-types-and-java-types
+        inputProductAdd:
+          destination: mqTestProduct
+          group: addProductHandler      # 拥有 group 默认会持久化队列
+        outputProductAdd:
+          destination: mqTestProduct
+      rabbit:
+        bindings:
+          inputProductAdd:
+            consumer:
+              bindingRoutingKey: addProduct.*       # 用来并不绑定消费者的 routing key
+          outputProductAdd:
+            producer:
+              routing-key-expression: '''addProduct.*'''  # 需要用这个来指定 RoutingKey
+      binders:
+        defaultRabbit:
+          type: rabbit
+          environment:
+            spring:
+             rabbitmq:
+              host: 127.0.0.1
+              username: guest
+              password: guest
 
 mybatis:
     basepackage: com.cssrc.uc.mapper
