--- a/ice-eureka/src/main/resources/application.yml
+++ b/ice-eureka/src/main/resources/application.yml
@@ -5,9 +5,11 @@ eureka:
   instance:
     hostname: localhost
   client:
+    #是否注册到eurekaserver
     registerWithEureka: false  #false 不作为一个客户端注册到注册中心
+    #是否拉取信息
     fetchRegistry: false   #为true可以启动，但是报异常：cannot execute request on any known server
  # server:
- #   enable-self-preservation: false    #设为false，关闭自我保护
+ #   enable-self-preservation: false    #设为false，关闭自我保护，不管如何都要剔除心跳检测异常的服务
  #   eviction-interval-timer-in-ms: 60000  #清理间隔 单位为毫秒 60*1000
 
