增加微服务ice-product 用于生产管理
# Conflicts:
#	README.md

--- a/ice-product/pom.xml
+++ b/ice-product/pom.xml
@@ -9,9 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ice-uc</artifactId>
-    <packaging>pom</packaging>
-
+    <artifactId>ice-product</artifactId>
     <properties>
         <!-- 依赖版本 -->
         <mapper.version>3.4.0</mapper.version>
